# demo-cloud-engineer-agent

./: .gitignore  README.md  main.py  pyproject.toml
agent/: Dockerfile  interact_with_runtime.py  pyproject.toml  runtime.py
agent/app/: .env_example  __init__.py  ai_models.py  cloud_engineer_agent.py  constants.py  git_tools.py  main.py  mcp_servers.py  prompts.py  terraform_command_tools.py  utils.py
agent/app/skills/applying-backend-best-practices/: SKILL.md
agent/app/skills/applying-backend-best-practices/references/: lambda.md  observability.md  security.md  terraform-naming.md  terraform-structure.md  terraform-validation.md
agent/app/skills/applying-frontend-best-practices/: SKILL.md
agent/app/skills/applying-frontend-best-practices/references/: accessibility.md  api-communication.md  css.md  forms.md  performance.md  security.md  state-management.md  structure.md
terraform/: .gitignore  README.md  agentcore_runtime.tf  api_gateway.tf  backend.tf  ecr.tf  iam.tf  lambda.tf  locals.tf  oidc.tf  outputs.tf  provider.tf  secrets.tf  variables.tf
terraform/lambda_functions/: webhook_handler.py
